--- a/Makefile.sc-rpi-ux-minimal
+++ b/Makefile.sc-rpi-ux-minimal
@@ -6,45 +6,36 @@
 SHELL := /bin/sh
 
 bitd_s := $(shell getconf LONG_BIT)
-rpi_m  := $(shell cat /proc/device-tree/model | awk -v RS=[0-9]+ '{print RT+0;exit}')
-
-
-ifeq ($(rpi_m),4)
-
-   MARCH := -march=armv8-a+crc
-   MTUNE := -mtune=cortex-a72
-
-else ifeq ($(rpi_m),3)
-
-   MARCH := -march=armv8-a+crc
-   MTUNE := -mtune=cortex-a53
-
-else
-
-   $(error "Problems identifiying RPi 3 or 4!")
-
+#RPI4
+CPART := $(shell cat /proc/cpuinfo | grep part | grep -q 0xd08 && echo cortex-a72)
+#RPI3
+ifndef CPART
+   CPART := $(shell cat /proc/cpuinfo | grep part | grep -q 0xd03 && echo cortex-a53)
 endif
+
+
+ifndef CPART
+   $(error "Problems identifiying RPi 3 or 4!")
+endif
+
+
+MARCH := -march=armv8-a+crc
+MTUNE := -mtune=$(CPART)
 
 
 ifeq ($(bitd_s),64)
-
    TUNEOPTS :=
-
 else ifeq ($(bitd_s),32)
-
    TUNEOPTS := -mfpu=neon-fp-armv8 -mfloat-abi=hard
-
 endif
 
 # $(info bitd_s=$(bitd_s))
-# $(info rpi_m=$(rpi_m))
+# $(info CPART=$(CPART))
 # $(info TUNEOPTS=$(TUNEOPTS))
 # $(info MARCH=$(MARCH))
 # $(info MTUNE=$(MTUNE))
 
-
 OPTS = -DNO_FAAD
-
-CFLAGS  = -Wall -fPIC -O3 $(MARCH) $(MTUNE) $(TUNEOPTS) -pipe
+CFLAGS = -Wall -fPIC -O3 $(MARCH) $(MTUNE) $(TUNEOPTS) -pipe
 
 include Makefile
